--- a/IdentidadByEMC/IdentidadSite/Views/Empresa/About.cshtml
+++ b/IdentidadByEMC/IdentidadSite/Views/Empresa/About.cshtml
@@ -1,19 +1,17 @@
-﻿
-@{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+﻿ @{
+     Layout = "~/Views/Shared/_Layout.cshtml";
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/js/scriptsSite/usuario/jsIndex.js"></script>
+    <script src="~/js/scriptsSite/empresa/jsAbout.js"></script>
+    <link rel="stylesheet" type="text/css" href="~/js/dataTables/datatables.css" />
+    <script type="text/javascript" src="~/js/dataTables/datatables.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css" integrity="sha512-3pIirOrwegjM6erE5gPSwkUzO+3cTjpnV9lexlNZqvupR64iZBnOOTiiLPb9M36zpMScbmUNIcHUqKD47M719g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" integrity="sha512-VEd+nq25CkR676O+pLBnDW09R7VQX9Mdiij052gVCp5yVH3jGtH70Ho/UUv4mJDsEdTvqRCFZg0NKGiojGnUCw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 }
 
-
 <script>
-    var urlAddUsuario = '@Url.Action("AddUsuario","Usuario")';
-    var urlAllUsers = '@Url.Action("About","Usuario")';
+    var urlAddEmpresa= '@Url.Action("AddEmpresa","Empresa")';
 </script>
-
 
 
 <div class="card" style="margin-top:5%;">
@@ -22,62 +20,51 @@
         <div class="form-horizontal" style="color:dimgray">
             <div class="form-group row">
                     <div class="col-md-8">
-                        <h1 style="color:dimgray"> Nuevo Usuario </h1>
+                        <h1 style="color:dimgray"> Afiliar Empresa</h1>
                     </div>
                     <div class="col-md-3 text-md-right">
-                        <a href="javascript:void(0);" class="btn btn-primary" onclick="GotoUsers()">Todos los Usuarios</a>
+                        <a href=@Url.Action("Index","Empresa")  class="btn btn-primary" >Todas las Empresas</a>
                     </div>
             </div>
                
                 <div class="form-group row">
                     <div class="col-md-3 text-md-right">
-                        <label class="control-label">Nombre</label>
+                        <label class="control-label">Nombre Empresa</label>
                     </div>
                     <div class="col-md-8">
                         <input type="text" id="nombre" class="form form-control" autocomplete="off" required />
                     </div>
 
                     <div class="col-md-3 text-md-right">
-                        <label class="control-label">Apellido</label>
+                        <label class="control-label">Rfc</label>
                     </div>
                     <div class="col-md-8">
-                        <input type="text" id="apellido" class="form form-control" autocomplete="off" required />
+                        <input type="text" id="rfc" class="form form-control" autocomplete="off" required />
                     </div>
                     <div class="col-md-3 text-md-right">
-                        <label class="control-label">Rol</label>
+                        <label class="control-label">Direccion</label>
                     </div>
                     <div class="col-md-8">
-                        <select id="rol" class="form-control form-control-sm" onchange="" required> </select>
+                      <input type="text" id="direccion" class="form form-control" autocomplete="off" required />
                     </div>
                     <div class="col-md-3 text-md-right">
-                        <label class="control-label">Username</label>
+                        <label class="control-label">Telefono</label>
                     </div>
                     <div class="col-md-8">
-                        <input type="text" id="username" class="form form-control" autocomplete="off" required />
+                        <input type="text" id="telefono" class="form form-control" autocomplete="off" required />
                     </div>
                     <div class="col-md-3 text-md-right">
                         <label class="control-label">Email</label>
                     </div>
                     <div class="col-md-8">
                         <input type="email" id="email" class="form form-control" autocomplete="off" required />
-                    </div>
-                    <div class="col-md-3 text-md-right">
-                        <label class="control-label">Password</label>
-                    </div>
-                    <div class="col-md-8">
-                        <input type="password" id="password" class="form form-control" autocomplete="off" required />
-                    </div>
-                    <div class="col-md-3 text-md-right">
-                        <label class="control-label">Confirmar Password</label>
-                    </div>
-                    <div class="col-md-8">
-                        <input type="password" id="cpassword" class="form form-control" autocomplete="off" required />
-                    </div>                <hr />
-                    <div class="col-md-3 text-md-right">
+                    </div> <hr />
+                   <div class="col-md-3 text-md-right">
                         <label class="control-label">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
                     </div>
+                   
                     <div class="col-md-8">
-                        <input type="button" value="Aceptar" class="btn btn-success form-control" onclick="CrearUsuario();" />
+                        <input type="button" value="Aceptar" class="btn btn-success form-control" onclick="CrearEmpresa();" />
                     </div>
 
                 </div>
