--- a/IdentidadByEMC/IdentidadSite/Views/Empresa/Index.cshtml
+++ b/IdentidadByEMC/IdentidadSite/Views/Empresa/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+     Layout = "~/Views/Shared/_Layout.cshtml";
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/js/scriptsSite/usuario/jsAbout.js"></script>
+    <script src="~/js/scriptsSite/empresa/jsIndex.js"></script>
     <link rel="stylesheet" type="text/css" href="~/js/dataTables/datatables.css" />
     <script type="text/javascript" src="~/js/dataTables/datatables.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css" integrity="sha512-3pIirOrwegjM6erE5gPSwkUzO+3cTjpnV9lexlNZqvupR64iZBnOOTiiLPb9M36zpMScbmUNIcHUqKD47M719g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -10,12 +10,14 @@
 
 }
 
+
 <script>
-    var urlGetUsuarios = '@Url.Action("GetUsuarios","Usuario")';
-    var urlUsuarios = '@Url.Action("Index","Usuario")';
-    var urlEditEstatus = '@Url.Action("UpdateEstatusUsuario", "Usuario")';
-    var urlDeleteUser = '@Url.Action("DeleteUSuario", "Usuario")';
+    var urlAddEmpresa = '@Url.Action("AddEmpresa","Empresa")';
+    var urlGetEmpresas = '@Url.Action("GetEmpresas","Empresa")';
+    var urlEditEstatus = '@Url.Action("UpdateEstatusEmpresa","Empresa")';
+    var urlDeleteEmpresa = '@Url.Action("DeleteEmpresa","Empresa")';
 </script>
+
 
 <div class="card" style="margin-top:0%;">
     <div class="card-body">
@@ -24,23 +26,24 @@
 
             <div class="form-group row">
                 <div class="col-md-8">
-                    <h2 style="color:dimgray"> Usuarios Registrados</h2>
+                    <h2 style="color:dimgray"> Empresas Registradas</h2>
                 </div>
-                <div class="col-md-3 text-md-right">
-                    <a href="javascript:void(0);" class="btn btn-primary" onclick="GotoUsers();">Nuevo</a>
-                </div>
+                   <div class="col-md-3 text-md-right">
+                        <a href= @Url.Action("About","Empresa") class="btn btn-primary" >Nueva Empresa</a>
+                    </div>
             </div>
 
             <input type="hidden" id="initDataTable" value="no" />
-            <table id="tablaUsuarios" class="display compact dt-center table table-striped table-light" style="width:100%">
+            <table id="tablaEmpresas" class="display compact dt-center table table-striped table-light" style="width:100%">
                 <thead class="thead-dark">
                     <tr>
                         <th>Estatus</th>
-                        <th>Nombre</th>
-                        <th>Apellido</th>
-                        <th>Username</th>
+                        <th>Codigo</th>
+                        <th>Empresa</th>
+                        <th>Identidad</th>
                         <th>Email</th>
-                        <th>Rol</th>
+                        <th>Telefono</th>
+                        <th>Direccion</th>
                         <th></th>
                         <th></th>
                     </tr>
