--- a/IdentidadByEMC/IdentidadSite/Views/Home/Index.cshtml
+++ b/IdentidadByEMC/IdentidadSite/Views/Home/Index.cshtml
@@ -17,18 +17,18 @@
 <div class="card" style="margin-top:5%;">
     <div class="card-body">
         <div class="form-horizontal" style="color:dimgray">
-            <h1 style="color:dimgray"> Login </h1>
-            <small class="mb-md-0 text-gray">Hello let's get started</small>
+            <h1 style="color:dimgray"> Acceso </h1>
+            <small class="mb-md-0 text-gray">Hola comenzemos!</small>
             <div class="form-group row">
 
                 <div class="col-md-3 text-md-right">
-                    <label class="control-label">Company</label>
+                    <label class="control-label">Empresa</label>
                 </div>
                 <div class="col-md-8">
                     <select id="empresa" name="empresa" class="form-control form-control-sm" onchange="" required> </select>
                 </div>
                 <div class="col-md-3 text-md-right">
-                    <label class="control-label">Username/Email</label>
+                    <label class="control-label">Usuario/Email</label>
                 </div>
                 <div class="col-md-8">
                     <input type="text" id="userMail" name="userMail" class="form form-control" />
@@ -44,7 +44,7 @@
                     <input type="checkbox" id="confirmar" class="" form-check-input> <br>
                 </div>
                 <div class="col-md-2">
-                    <label class="control-label">Confirm</label>
+                    <label class="control-label">Confirmar</label>
                 </div>
 
             </div>
@@ -53,10 +53,10 @@
                     <label class="control-label">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
                 </div>
                 <div class="col-md-8">
-                    <input type="button" value="Accept" class="btn btn-success form-control" onclick="Login();" />
+                    <input type="button" value="Aceptar" class="btn btn-success form-control" onclick="Login();" />
                 </div>
                 <div class="col-md-6 text-md-right" style="display:none;">
-                    <input type="reset" value="Cancel" class="btn btn-danger form-control" onclick="Reset()" style="width:200px;" />
+                    <input type="reset" value="Cancelar" class="btn btn-danger form-control" onclick="Reset()" style="width:200px;" />
                 </div>
             </div>
 
