--- a/IdentidadByEMC/IdentidadSite/Views/UploadFile/Index.cshtml
+++ b/IdentidadByEMC/IdentidadSite/Views/UploadFile/Index.cshtml
@@ -19,7 +19,7 @@
               <form asp-controller="UploadFile" asp-action="CargarArchivo" method="POST"  enctype="multipart/form-data" multiple>  
                 <div class="form-group row">                     
                       <div class="col-md-8">
-                               <input type="file" id="file" name="file" class="btn btn-primary" />  
+                               <input type="file" id="files" name="files" class="btn btn-primary" />  
                       </div>
                       <div class="col-md-4 text-md-right">
                             <button type="submit" class="btn btn-success" > <i class="bi bi-upload">  Subir Archivos</i></button>
