--- a/IdentidadByEMC/IdentidadSite/Views/Empresa/About.cshtml
+++ b/IdentidadByEMC/IdentidadSite/Views/Empresa/About.cshtml
@@ -4,9 +4,8 @@
     <script src="~/js/scriptsSite/empresa/jsAbout.js"></script>
     <link rel="stylesheet" type="text/css" href="~/js/dataTables/datatables.css" />
     <script type="text/javascript" src="~/js/dataTables/datatables.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css" integrity="sha512-3pIirOrwegjM6erE5gPSwkUzO+3cTjpnV9lexlNZqvupR64iZBnOOTiiLPb9M36zpMScbmUNIcHUqKD47M719g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" integrity="sha512-VEd+nq25CkR676O+pLBnDW09R7VQX9Mdiij052gVCp5yVH3jGtH70Ho/UUv4mJDsEdTvqRCFZg0NKGiojGnUCw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
+    <link rel="stylesheet" href="~/js/toastr/toastr.css" />
+    <script src="~/js/toastr/toastr.min.js"></script> 
 }
 
 <script>
