--- a/IdentidadByEMC/IdentidadSite/Views/Shared/_Layout.cshtml
+++ b/IdentidadByEMC/IdentidadSite/Views/Shared/_Layout.cshtml
@@ -34,7 +34,10 @@
                         <li class="nav-item">
                             <a href="@Url.Action("Index","UploadFile")" class="nav-link text-info" id="uploadFile_">Archivos</a>
                         </li>
-                
+                        <li class="nav-item">
+                            <a href="@Url.Action("Index","Empresa")" class="nav-link text-info" id="empresas_">Empresas</a>
+                        </li>
+                       
                     </ul>
                 </div>
             </div>
@@ -60,3 +63,4 @@
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
+
