--- a/IdentidadByEMC/IdentidadSite/Views/Shared/_Layout.cshtml
+++ b/IdentidadByEMC/IdentidadSite/Views/Shared/_Layout.cshtml
@@ -37,7 +37,9 @@
                         <li class="nav-item">
                             <a href="@Url.Action("Index","Empresa")" class="nav-link text-info" id="empresas_">Empresas</a>
                         </li>
-                       
+                        <li class="nav-item">
+                            <a href="@Url.Action("Index","Meta")" class="nav-link text-info" id="personas_">Personas</a>
+                        </li>
                     </ul>
                 </div>
             </div>
