--- a/IdentidadByEMC/IdentidadSite/Views/Meta/Index.cshtml
+++ b/IdentidadByEMC/IdentidadSite/Views/Meta/Index.cshtml
@@ -6,36 +6,113 @@
     <script src="~/js/scriptsSite/meta/jsIndex.js"></script>
     <link rel="stylesheet" href="~/js/toastr/toastr.css" />
     <script src="~/js/toastr/toastr.min.js"></script>
+    <link rel="stylesheet" href="~/css/modalStyle.css" />
+      <script src="~/js/dataTables/datatables.js"></script>
+    <link rel="stylesheet" href="~/js/dataTables/datatables.css" />
 }
 
 
 <script>
+    var urlBuscarPersonas = '@Url.Action("GetPersonas","Persona")';
+    var urlGuardarAsistencia= '@Url.Action("GuardarAsistencia","Meta")';
     var urlGetGrados = '@Url.Action("GetGrados","Grados")';
     var urlGetGrupos= '@Url.Action("GetGrupos","Grupos")';
 </script>
 
 <div class="card" style="margin-top:5%;">
     <div class="card-body">
-         <div class="form-horizontal" style="color:dimgray">
+         <div class="form-horizontal" style="color: #0268b8;">
 
-              <div class="form-group row">
-                  <div class="col-md-3 text-md-left">
-                      <span>Grado</span>
-                    <select id="grado" class="form-control" onchange=""> </select>
-                </div>
-                  <div class="col-md-3 text-md-left">
+          <div class="form-group row">
+                    <div class="col-md-3 text-md-left">
+                        <span>Grado</span>
+                        <select id="grado" class="form-control" onchange=""> </select>
+                     </div>
+                    <div class="col-md-3 text-md-left">
                         <span>Grupo</span>
-                    <select id="grupo" class="form-control" onchange=""></select>
-                </div>
+                        <select id="grupo" class="form-control" onchange=""></select>
+                    </div>
                   <div class="col-md-3 text-md-left">
                         <span>Turno</span>
-                    <select id="turno" class="form-control" onchange=""></select>
-                </div>
-                <div class="col-md-3 text-md-center">
-                    <br />
-                    <input type="button" id="buscar" value="Buscar" class="btn btn-primary" style="" onclick="" />
-                </div>
+                        <select id="turno" class="form-control" onchange=""></select>
+                  </div>
+                  <div class="col-md-3 text-md-center">
+                     <br />
+                    <input type="button" id="buscar" value="Buscar" class="btn btn-primary" style="" onclick="BuscarPersonas();" />
+                 </div>
               </div>
          </div>
+
+         <hr />
+          <div class="col-md-12 text-md-left">
+           <span>Catedra</span>
+             <select id="catedra" class="form-control" onchange=""> </select>
+           </div>
+          <div class="form-horizontal">
+               <input type="hidden" id="initDataTable" value="no" />
+               <table id="tablaUsuarios" class="display compact dt-center table table-striped table-light" style="width:100%">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>#</th>
+                        <th>Nombre</th>
+                        <th>Apellido</th>
+                        <th>Email</th>
+                        <th>Matricula</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                    </tr>
+                </tbody>
+            </table>
+            <br />
+              <div class="col-md-12">
+                       <input type="submit" value="Aceptar" class="btn btn-success form-control"   onclick="GetIdPersonas();" />
+                </div>
+          </div>
+         <hr />
+
+            <div class="form-group row">
+                 <div class="modalTipo" id="asistencia_">
+                    <div class="modal-content2">
+                          <div class="form-horizontal">
+                               <label>Establecer Asistencia</label>
+                                   <div class="col-md-4 text-md-left" style="margin-bottom:100px;">
+                                    <img src="~/template/noFoto.jpg" alt="FOTO" class="imgCarnet">
+                                     </div>
+                                  <div class="col-md-12 text-md-left">
+                                    <span>Fecha</span>
+                                    <input type="date" class="form-control" id="fecha" />
+                                </div>
+                                 <div class="col-md-12 text-md-left">
+                                    <span>Catedra</span>
+                                    <select id="materia" class="form-control" onchange=""> </select>
+                                </div>
+                                <div class="col-md-12 text-md-left">
+                                    <span>Asistencia</span>
+                                    <select id="tipoAsistencia" class="form-control" onchange=""> </select>
+                                </div>
+                                <div class="col-md-12 text-md-left">
+                                    <span>Nombre</span>
+                                       <input type="text" class="form-control" id="e_mail" disabled/>
+                                      <input type="text" class="form-control" id="nombre" disabled/>
+                                      <input type="hidden" class="form-control" id="matricula" disabled/>
+                                </div>
+                                  <div class="col-md-12 text-md-left">
+                                    <span>Observacion</span>
+                                      <input type="text" class="form-control" id="observacion"/>
+                                </div>
+                                <br />
+                                <div class="col-md-12">
+                                   <input type="submit" value="Aceptar" class="btn btn-success" style="float:left;" onclick="GuardarAsistenciaEspecifica();" />
+                                   <input type="submit" value="Cancelar" class="btn btn-danger" style="float:right;" onclick="OcultarModalAsistencia();" />
+                               </div>
+                          </div>
+                    </div> 
+                 </div>
+            </div>
+
+
     </div>
 </div>
