--- a/IdentidadByEMC/IdentidadSite/wwwroot/css/modalStyle.css
+++ b/IdentidadByEMC/IdentidadSite/wwwroot/css/modalStyle.css
@@ -27,3 +27,10 @@
     transform: translate(-50%, -50%);
     padding: 30px;
 }
+
+.imgCarnet {
+    width: 100px;
+    height: 100px;
+    float: left;
+    border-radius: 150px;
+}
