--- a/IdentidadByEMC/IdentidadSite/Views/Shared/_Layout.cshtml
+++ b/IdentidadByEMC/IdentidadSite/Views/Shared/_Layout.cshtml
@@ -38,7 +38,10 @@
                             <a href="@Url.Action("Index","Empresa")" class="nav-link text-info" id="empresas_">Empresas</a>
                         </li>
                         <li class="nav-item">
-                            <a href="@Url.Action("Index","Meta")" class="nav-link text-info" id="personas_">Personas</a>
+                            <a href="@Url.Action("Index","Meta")" class="nav-link text-info" id="personas_">Asistencia</a>
+                        </li>
+                             <li class="nav-item">
+                            <a href="@Url.Action("About","Meta")" class="nav-link text-info" id="resumen_">Resumen</a>
                         </li>
                     </ul>
                 </div>
