--- a/IdentidadByEMC/IdentidadSite/Views/Usuario/Index.cshtml
+++ b/IdentidadByEMC/IdentidadSite/Views/Usuario/Index.cshtml
@@ -35,12 +35,17 @@
                     <div class="col-md-8">
                         <input type="text" id="nombre" class="form form-control" autocomplete="off" required />
                     </div>
-
                     <div class="col-md-3 text-md-right">
                         <label class="control-label">Apellido</label>
                     </div>
                     <div class="col-md-8">
                         <input type="text" id="apellido" class="form form-control" autocomplete="off" required />
+                    </div>
+                     <div class="col-md-3 text-md-right">
+                        <label class="control-label">D.I</label>
+                    </div>
+                    <div class="col-md-8">
+                        <input type="text" id="dni" class="form form-control" autocomplete="off" required />
                     </div>
                     <div class="col-md-3 text-md-right">
                         <label class="control-label">Rol</label>
