--- a/IdentidadByEMC/IdentidadSite/Views/Home/Index.cshtml
+++ b/IdentidadByEMC/IdentidadSite/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
     <div class="card-body">
         <div class="form-horizontal" style="color:dimgray">
             <h1 style="color:dimgray"> Acceso </h1>
-            <small class="mb-md-0 text-gray" style="font-size:18px;color:green;">Hola Comenzemos!</small>
+            <small class="mb-md-0 text-gray" style="font-size: 18px; color: #064cf8;">Hola Comenzemos!</small>
             <div class="form-group row">
                 <div class="col-md-3 text-md-right">
                     <label class="control-label">Empresa</label>
@@ -52,7 +52,7 @@
                     <label class="control-label">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
                 </div>
                 <div class="col-md-8">
-                    <input type="button" value="Aceptar" class="btn btn-success form-control" onclick="Login();" />
+                    <input type="button" value="Aceptar" class="btn btn-primary form-control" onclick="Login();" />
                 </div>
                 <div class="col-md-6 text-md-right" style="display:none;">
                     <input type="reset" value="Cancelar" class="btn btn-danger form-control" onclick="Reset()" style="width:200px;" />
