--- a/IdentidadByEMC/IdentidadSite/Views/Shared/_footer.cshtml
+++ b/IdentidadByEMC/IdentidadSite/Views/Shared/_footer.cshtml
@@ -1,5 +1,5 @@
 ﻿<footer class="footer" style="background-color: #F4F4F4;">
-    <div class="container-fluid clearfix" style="color: #5ABE33; font-size: 16px; ">
+    <div class="container-fluid clearfix" style="color: #064cf8; font-size: 16px; ">
         <span class="d-block text-center text-sm-left d-sm-inline-block"> Copyright ©  @DateTime.Now.Year Desarrollado por EMC Todos los derechos reservados.</span>
 
     </div>
