--- a/IdentidadByEMC/IdentidadSite/Views/Shared/_navbar.cshtml
+++ b/IdentidadByEMC/IdentidadSite/Views/Shared/_navbar.cshtml
@@ -1,5 +1,5 @@
 ﻿<nav class="navbar default-layout-navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row" >
-    <div class="navbar-menu-wrapper d-flex align-items-stretch" style="background-color:#5ABE33">
+    <div class="navbar-menu-wrapper d-flex align-items-stretch" style="background-color: #110dfb">
         <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize" style="background-color:#53565A">
             <span class="mdi mdi-chevron-double-left" ></span>
         </button>
